
[package]
name = "vecdeque"
version = "0.1.0"
edition = "2021"
description = "Flux port of https://github.com/model-checking/kani/blob/main/tests/cargo-kani/vecdeque-cve/"

[lib]
path = "src/lib.rs"
crate_type = ["dylib", "rlib"]

[dependencies]
flux-rs = { git  = "https://github.com/flux-rs/flux.git" }

[package.metadata.flux]
enabled = true
